--- a/config/test.conf
+++ b/config/test.conf
@@ -83,9 +83,15 @@ edges {
     "db-timing",
     "connection-pool-release-timing",
     "connection-pool-reserve-timing",
+    "database-open-timing",
+    "database-close-timing",
+    "db-count-query-default",
+    "x-db-timing-query-default",
     "kestrel-put-timing",
-    "db-select-count",
-    "db-execute-count",
+    "db-count-select",
+    "db-count-execute",
+    "db-timing-select",
+    "db-timing-execute",
     "job-success-count",
     "operation",
     "arguments"
