fix development logging and db names.

--- a/config/development.conf
+++ b/config/development.conf
@@ -57,8 +57,42 @@ errors {
 }
 
 log {
-  level = "fatal"
-  console = true
+  level = "info"
+  console = false
+  filename = "flock.log"
+  roll = "never"
+  truncate_stack_traces = 100
+
+  w3c {
+    node = "w3c"
+    use_parents = false
+    filename = "w3c.log"
+    level = "info"
+    roll = "never"
+  }
+
+  w3c_events {
+    node = "w3c-events"
+    use_parents = false
+    filename = "w3c-events.log"
+    level = "info"
+    roll = "never"
+  }
+
+  stats {
+    node = "stats"
+    filename = "stats.log"
+    level = "info"
+    roll = "never"
+  }
+
+  bad_jobs {
+    node = "bad_jobs"
+    use_parents = false
+    filename = "bad_jobs.log"
+    level = "info"
+    roll = "never"
+  }
 }
 
 throttled_log {
@@ -74,7 +108,7 @@ edges {
   average_intersection_proportion = 0.1
   intersection_page_size_max = 4000
   aggregate_jobs_page_size = 500
-  db_name = "edges_test"
+  db_name = "edges_development"
   client_timeout_msec = 100
   idle_timeout_sec = 10
 
@@ -94,7 +128,7 @@ edges {
   nameservers {
     ns1 (inherit="nameserver") {
       hostname = "localhost"
-      database = "flock_edges_test"
+      database = "flockdb_development"
     }
   }
 
