--- a/config/production.conf
+++ b/config/production.conf
@@ -74,7 +74,7 @@ edges {
   average_intersection_proportion = 0.1
   intersection_page_size_max = 4000
   aggregate_jobs_page_size = 500
-  db_name = "edges_test"
+  db_name = "edges_production"
   client_timeout_msec = 100
   idle_timeout_sec = 10
 
@@ -94,7 +94,7 @@ edges {
   nameservers {
     ns1 (inherit="nameserver") {
       hostname = "localhost"
-      database = "flock_edges_test"
+      database = "flock_edges_production"
     }
   }
 
