fix production.conf to match previous version.

--- a/config/production.conf
+++ b/config/production.conf
@@ -6,35 +6,35 @@ db {
   username = "$(DB_USERNAME)"
   password = "$(DB_PASSWORD)"
   connection_pool {
-    max_wait = 20
+    max_wait = 100
     min_evictable_idle_msec = -1
-    size_max = 10
-    size_min = 5
+    size_max = 40
+    size_min = 40
     test_idle_msec = 1000
     test_on_borrow = false
 
     timeout {
       initialize = 1000
-      open = 100
+      open = 50
       pool_size = 10
       queue_size = 10000
     }
   }
 
   disable {
-    error_count = 3
+    error_count = 100
     seconds = 60
   }
 
-  query_timeout_default = 2000
+  query_timeout_default = 3000
   queries {
-    select_source_id_for_update = ["SELECT * FROM ? WHERE source_id = ? FOR UPDATE", 2000]
+    select_source_id_for_update = ["SELECT * FROM ? WHERE source_id = ? FOR UPDATE", 3000]
   }
 }
 
 nameserver (inherit="db") {
   connection_pool {
-    max_wait = 20
+    max_wait = 100
     min_evictable_idle_msec = -1
     size_max = 1
     size_min = 1
@@ -57,8 +57,35 @@ errors {
 }
 
 log {
-  level = "fatal"
-  console = true
+  filename = "/var/log/flock/production.log"
+  level = "info"
+  roll = "hourly"
+  truncate_stack_traces = 100
+
+  w3c {
+    node = "w3c"
+    use_parents = false
+    filename = "/var/log/flock/w3c.log"
+    level = "info"
+    roll = "hourly"
+  }
+
+  stats {
+    node = "stats"
+    use_parents = false
+    level = "info"
+    scribe_category = "flock-stats"
+    scribe_server = "localhost"
+    scribe_max_packet_size = 100
+  }
+
+  bad_jobs {
+    node = "bad_jobs"
+    use_parents = false
+    filename = "/var/log/flock/bad_jobs.log"
+    level = "info"
+    roll = "never"
+  }
 }
 
 throttled_log {
@@ -70,22 +97,28 @@ edges {
   server_port = 7915
   shard_server_port = 7917
   job_server_port = 7919
-  min_threads = 5
+  min_threads = 200
   average_intersection_proportion = 0.1
   intersection_page_size_max = 4000
   aggregate_jobs_page_size = 500
-  db_name = "edges_production"
+  db_name = "edges"
   client_timeout_msec = 100
-  idle_timeout_sec = 10
+  idle_timeout_sec = 60
 
   w3c = [
     "action-timing",
     "db-timing",
     "connection-pool-release-timing",
     "connection-pool-reserve-timing",
+    "database-open-timing",
+    "database-close-timing",
+    "db-count-query-default",
+    "x-db-timing-query-default",
     "kestrel-put-timing",
-    "db-select-count",
-    "db-execute-count",
+    "db-count-select",
+    "db-count-execute",
+    "db-timing-select",
+    "db-timing-execute",
     "job-success-count",
     "operation",
     "arguments"
@@ -93,7 +126,12 @@ edges {
 
   nameservers {
     ns1 (inherit="nameserver") {
-      hostname = "localhost"
+      hostname = "flockdb001.twitter.com"
+      database = "flock_edges_production"
+    }
+
+    ns2 (inherit="nameserver") {
+      hostname = "flockdb002.twitter.com"
       database = "flock_edges_production"
     }
   }
@@ -115,27 +153,26 @@ edges {
   }
 
   queue {
-    path = "/tmp"
-    journal off
+    path = "/var/spool/kestrel"
     primary {
       job_queue = "edges_jobs"
       error_queue = "edges_errors"
-      threads = 1
-      error_limit = 25
+      threads = 64
+      error_limit = 100
       replay_interval = 900
     }
     copy {
       job_queue = "copy_jobs"
       error_queue = "copy_errors"
-      threads = 1
-      error_limit = 25
-      replay_interval = 900
+      threads = 24
+      error_limit = 1000
+      replay_interval = 60
     }
     slow {
       job_queue = "edges_slow_jobs"
       error_queue = "edges_slow_errors"
-      threads = 1
-      error_limit = 25
+      threads = 4
+      error_limit = 100
       replay_interval = 900
     }
     max_memory_size = 36000000
