use newer gizzard with simpler thrift services config.

--- a/config/development.conf
+++ b/config/development.conf
@@ -100,17 +100,21 @@ throttled_log {
   rate = 10
 }
 
-edges {
-  server_port = 7915
+gizzard_services {
+  name = "edges"
+  min_threads = 5
   shard_server_port = 7917
   job_server_port = 7919
-  min_threads = 5
+  client_timeout_msec = 100
+  idle_timeout_sec = 10
+}
+
+edges {
+  server_port = 7915
   average_intersection_proportion = 0.1
   intersection_page_size_max = 4000
   aggregate_jobs_page_size = 500
   db_name = "edges_development"
-  client_timeout_msec = 100
-  idle_timeout_sec = 10
 
   w3c = [
     "action-timing",
