--- a/config/production.conf
+++ b/config/production.conf
@@ -93,17 +93,21 @@ throttled_log {
   rate = 10
 }
 
-edges {
-  server_port = 7915
+gizzard_services {
+  name = "edges"
+  min_threads = 200
   shard_server_port = 7917
   job_server_port = 7919
-  min_threads = 200
+  client_timeout_msec = 100
+  idle_timeout_sec = 60
+}
+
+edges {
+  server_port = 7915
   average_intersection_proportion = 0.1
   intersection_page_size_max = 4000
   aggregate_jobs_page_size = 500
   db_name = "edges"
-  client_timeout_msec = 100
-  idle_timeout_sec = 60
 
   w3c = [
     "action-timing",
