simplify nameserver config.

--- a/config/test.conf
+++ b/config/test.conf
@@ -32,24 +32,13 @@ db {
   }
 }
 
-nameserver (inherit="db") {
-  connection_pool {
-    max_wait = 20
-    min_evictable_idle_msec = -1
+# use a connection pool of 1 when materializing tables.
+# (the memoizing connection pools will create a new connection pool because there's no db name.)
+materializing_db (inherit="db") {
+  connection_pool (inherit="db.connection_pool") {
     size_max = 1
     size_min = 1
-    test_idle_msec = 1000
-    test_on_borrow = false
-
-    timeout {
-      initialize = 1000
-      open = 500
-      pool_size = 10
-      queue_size = 10000
-    }
   }
-  query_timeout_default = 15000
-  queries { }
 }
 
 errors {
@@ -101,10 +90,29 @@ edges {
     "arguments"
   ]
 
-  nameservers {
-    ns1 (inherit="nameserver") {
-      hostname = "localhost"
-      database = "flock_edges_test"
+  nameservers (inherit="db") {
+    connection_pool {
+      max_wait = 20
+      min_evictable_idle_msec = -1
+      size_max = 1
+      size_min = 1
+      test_idle_msec = 1000
+      test_on_borrow = false
+
+      timeout {
+        initialize = 1000
+        open = 500
+        pool_size = 10
+        queue_size = 10000
+      }
+    }
+    query_timeout_default = 15000
+
+    replicas {
+      ns1 (inherit="db") {
+        hostname = "localhost"
+        database = "flock_edges_test"
+      }
     }
   }
 
