--- a/config/production.conf
+++ b/config/production.conf
@@ -32,24 +32,13 @@ db {
   }
 }
 
-nameserver (inherit="db") {
-  connection_pool {
-    max_wait = 100
-    min_evictable_idle_msec = -1
+# use a connection pool of 1 when materializing tables.
+# (the memoizing connection pools will create a new connection pool because there's no db name.)
+materializing_db (inherit="db") {
+  connection_pool (inherit="db.connection_pool") {
     size_max = 1
     size_min = 1
-    test_idle_msec = 1000
-    test_on_borrow = false
-
-    timeout {
-      initialize = 1000
-      open = 500
-      pool_size = 10
-      queue_size = 10000
-    }
   }
-  query_timeout_default = 15000
-  queries { }
 }
 
 errors {
@@ -128,15 +117,34 @@ edges {
     "arguments"
   ]
 
-  nameservers {
-    ns1 (inherit="nameserver") {
-      hostname = "flockdb001.twitter.com"
-      database = "flock_edges_production"
-    }
+  nameservers (inherit="db") {
+    connection_pool {
+      max_wait = 100
+      min_evictable_idle_msec = -1
+      size_max = 1
+      size_min = 1
+      test_idle_msec = 1000
+      test_on_borrow = false
 
-    ns2 (inherit="nameserver") {
-      hostname = "flockdb002.twitter.com"
-      database = "flock_edges_production"
+      timeout {
+        initialize = 1000
+        open = 500
+        pool_size = 10
+        queue_size = 10000
+      }
+    }
+    query_timeout_default = 15000
+
+    replicas {
+      ns1 (inherit="db") {
+        hostname = "flockdb001.twitter.com"
+        database = "flock_edges_production"
+      }
+
+      ns2 (inherit="db") {
+        hostname = "flockdb002.twitter.com"
+        database = "flock_edges_production"
+      }
     }
   }
 
