--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -24,10 +24,10 @@
 
     <dependency org="com.twitter" name="json" rev="1.1.1" />
     <dependency org="com.twitter" name="ostrich" rev="1.1.15" />
-    <dependency org="com.twitter" name="xrayspecs" rev="1.0.5" />
+    <dependency org="com.twitter" name="xrayspecs" rev="1.0.7" />
     <dependency org="com.twitter" name="querulous" rev="1.1.7" />
     <dependency org="com.twitter" name="results" rev="1.0" />
-    <dependency org="com.twitter" name="gizzard" rev="1.0.9" />
+    <dependency org="com.twitter" name="gizzard" rev="1.0.13" />
 
     <dependency org="net.lag" name="configgy" rev="1.5.2" />
     <dependency org="net.lag" name="smile" rev="0.8.11" />
@@ -47,7 +47,7 @@
     <dependency org="commons-dbcp" name="commons-dbcp" rev="1.2.2" />
     <dependency org="commons-pool" name="commons-pool" rev="1.3" />
 
-    <dependency org="kestrel" name="kestrel" rev="1.2" />
+    <dependency org="net.lag" name="kestrel" rev="1.2" />
 
     <dependency org="org.jmock" name="jmock" rev="2.4.0" conf="test->*" />
     <!--dependency org="org.mockito" name="mockito-core" rev="1.7" conf="test->*" /-->
