fix test db name.

--- a/config/test.conf
+++ b/config/test.conf
@@ -100,7 +100,7 @@ edges {
   nameservers {
     ns1 (inherit="nameserver") {
       hostname = "localhost"
-      database = "flock_edges_test"
+      database = "edges_test"
     }
   }
 
