--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -28,7 +28,12 @@
     <dependency org="com.twitter" name="querulous" rev="1.1.7" />
     <dependency org="com.twitter" name="results" rev="1.0" />
     <dependency org="com.twitter" name="gizzard" rev="1.0.5" />
+    <dependency org="com.twitter" name="elephant-bird" rev="1.0" />
 
+    <dependency org="org.apache" name="hadoop-core" rev="0.20.1+133" />
+    <dependency org="org.apache" name="log4j" rev="1.2.15" />
+    <dependency org="org.apache" name="commons-codec" rev="1.3" />
+    
     <dependency org="net.lag" name="configgy" rev="1.5.2" />
     <dependency org="net.lag" name="smile" rev="0.8.11" />
     <dependency org="net.lag" name="naggati" rev="0.6" />
