fix tests for the new gizzard.

--- a/config/test.conf
+++ b/config/test.conf
@@ -32,7 +32,7 @@ db {
   }
 }
 
-nameserver (inherit="db") {
+nameservers (inherit="db") {
   connection_pool {
     max_wait = 20
     min_evictable_idle_msec = -1
@@ -50,6 +50,13 @@ nameserver (inherit="db") {
   }
   query_timeout_default = 15000
   queries { }
+
+  replicas {
+    ns1 (inherit="db") {
+      hostname = "localhost"
+      database = "flock_test"
+    }
+  }
 }
 
 errors {
@@ -96,13 +103,6 @@ edges {
     "operation",
     "arguments"
   ]
-
-  nameservers {
-    ns1 (inherit="nameserver") {
-      hostname = "localhost"
-      database = "edges_test"
-    }
-  }
 
   future {
     pool_size = 100
