make sure production.conf has a mapping too!

--- a/config/production.conf
+++ b/config/production.conf
@@ -118,6 +118,8 @@ edges {
   ]
 
   nameservers (inherit="db") {
+    mapping = "byte_swapper"
+
     connection_pool {
       max_wait = 100
       min_evictable_idle_msec = -1
