--- a/project/build.properties
+++ b/project/build.properties
@@ -3,6 +3,6 @@
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.3
-project.version=1.2.0
+project.version=1.2.0.pre.hdfs
 build.scala.versions=2.7.7
 project.initialize=false
