--- a/project/build.properties
+++ b/project/build.properties
@@ -3,6 +3,6 @@
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.3
-project.version=1.3.3.hdfs
+project.version=1.3.3
 build.scala.versions=2.7.7
 project.initialize=false
