use new configgy, make test jars not link into dist jar

--- a/config/development.conf
+++ b/config/development.conf
@@ -50,6 +50,8 @@ log {
   console = false
   filename = "flock.log"
   roll = "never"
+  throttle_period_msec = 60000
+  throttle_rate = 10
   truncate_stack_traces = 100
 
   w3c {
@@ -82,11 +84,6 @@ log {
     level = "info"
     roll = "never"
   }
-}
-
-throttled_log {
-  period_msec = 60000
-  rate = 10
 }
 
 gizzard_services {
