--- a/config/production.conf
+++ b/config/production.conf
@@ -49,6 +49,8 @@ log {
   filename = "/var/log/flock/production.log"
   level = "info"
   roll = "hourly"
+  throttle_period_msec = 60000
+  throttle_rate = 10
   truncate_stack_traces = 100
 
   w3c {
@@ -75,11 +77,6 @@ log {
     level = "info"
     roll = "never"
   }
-}
-
-throttled_log {
-  period_msec = 60000
-  rate = 10
 }
 
 gizzard_services {
