--- a/config/test.conf
+++ b/config/test.conf
@@ -48,11 +48,8 @@ errors {
 log {
   level = "fatal"
   console = true
-}
-
-throttled_log {
-  period_msec = 60000
-  rate = 10
+  throttle_period_msec = 60000
+  throttle_rate = 10
 }
 
 gizzard_services {
