timeout intersection queries

--- a/config/development.conf
+++ b/config/development.conf
@@ -97,6 +97,7 @@ gizzard_services {
 
 edges {
   server_port = 7915
+  intersection_timeout_ms = 100
   average_intersection_proportion = 0.1
   intersection_page_size_max = 4000
   aggregate_jobs_page_size = 500
