--- a/project/build.properties
+++ b/project/build.properties
@@ -3,6 +3,6 @@
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=2.0-SNAPSHOT
+project.version=2.0.glock2-SNAPSHOT
 build.scala.versions=2.7.7
 project.initialize=false
