keep up with the schema changes in gizzard.

--- a/config/production.conf
+++ b/config/production.conf
@@ -161,6 +161,7 @@ edges {
       max_pool_size = 100
       keep_alive_time_seconds = 5
       timeout_seconds = 6
+      write_timeout_ms = 6000
     }
   }
 
