--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Oct 14 18:16:19 PDT 2010
+#Thu Oct 21 19:19:20 PDT 2010
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.4.5-SNAPSHOT
+project.version=1.4.5
 build.scala.versions=2.7.7
 project.initialize=false
