to use the new gizzard, we need new config on queues.

--- a/config/development.conf
+++ b/config/development.conf
@@ -176,6 +176,8 @@ edges {
       threads = 1
       error_limit = 25
       replay_interval = 900
+      per_flush_item_limit = 1000
+      jitter_rate = 0
     }
     copy {
       job_queue = "copy_jobs"
@@ -183,6 +185,8 @@ edges {
       threads = 1
       error_limit = 25
       replay_interval = 900
+      per_flush_item_limit = 1000
+      jitter_rate = 0
     }
     slow {
       job_queue = "edges_slow_jobs"
@@ -190,6 +194,8 @@ edges {
       threads = 1
       error_limit = 25
       replay_interval = 900
+      per_flush_item_limit = 1000
+      jitter_rate = 0
     }
     max_memory_size = 36000000
   }
