--- a/config/production.conf
+++ b/config/production.conf
@@ -172,6 +172,8 @@ edges {
       threads = 32
       error_limit = 100
       replay_interval = 900
+      per_flush_item_limit = 1000
+      jitter_rate = 0
     }
     copy {
       job_queue = "copy_jobs"
@@ -179,6 +181,8 @@ edges {
       threads = 12
       error_limit = 1000
       replay_interval = 60
+      per_flush_item_limit = 1000
+      jitter_rate = 0
     }
     slow {
       job_queue = "edges_slow_jobs"
@@ -186,6 +190,8 @@ edges {
       threads = 2
       error_limit = 100
       replay_interval = 900
+      per_flush_item_limit = 1000
+      jitter_rate = 0
     }
     max_memory_size = 36000000
   }
