--- a/config/test.conf
+++ b/config/test.conf
@@ -139,6 +139,8 @@ edges {
       threads = 1
       error_limit = 25
       replay_interval = 900
+      per_flush_item_limit = 1000
+      jitter_rate = 0
     }
     copy {
       job_queue = "copy_jobs"
@@ -146,6 +148,8 @@ edges {
       threads = 1
       error_limit = 25
       replay_interval = 900
+      per_flush_item_limit = 1000
+      jitter_rate = 0
     }
     slow {
       job_queue = "edges_slow_jobs"
@@ -153,6 +157,8 @@ edges {
       threads = 1
       error_limit = 25
       replay_interval = 900
+      per_flush_item_limit = 1000
+      jitter_rate = 0
     }
     max_memory_size = 36000000
   }
