--- a/config/production.conf
+++ b/config/production.conf
@@ -26,9 +26,10 @@ db {
     seconds = 60
   }
 
-  query_timeout_default = 3000
-  queries {
-    select_source_id_for_update = ["SELECT * FROM ? WHERE source_id = ? FOR UPDATE", 3000]
+  timeouts {
+    select = 3000
+    select_modify = 3000
+    execute = 3000
   }
 }
 
