--- a/config/test.conf
+++ b/config/test.conf
@@ -26,9 +26,10 @@ db {
     seconds = 60
   }
 
-  query_timeout_default = 2000
-  queries {
-    select_source_id_for_update = ["SELECT * FROM ? WHERE source_id = ? FOR UPDATE", 2000]
+  timeouts {
+    select = 2000
+    select_modify = 2000
+    execute = 2000
   }
 }
 
