update config files with new queue config.

--- a/config/development.conf
+++ b/config/development.conf
@@ -176,8 +176,9 @@ edges {
       error_queue = "edges_errors"
       threads = 1
       error_limit = 25
-      replay_interval = 900
-      per_flush_item_limit = 1000
+      error_delay = 900
+      strobe_interval = 1000
+      flush_limit = 100
       jitter_rate = 0
     }
     copy {
@@ -185,8 +186,9 @@ edges {
       error_queue = "copy_errors"
       threads = 1
       error_limit = 25
-      replay_interval = 900
-      per_flush_item_limit = 1000
+      error_delay = 900
+      strobe_interval = 1000
+      flush_limit = 100
       jitter_rate = 0
     }
     slow {
@@ -194,8 +196,9 @@ edges {
       error_queue = "edges_slow_errors"
       threads = 1
       error_limit = 25
-      replay_interval = 900
-      per_flush_item_limit = 1000
+      error_delay = 900
+      strobe_interval = 1000
+      flush_limit = 100
       jitter_rate = 0
     }
     max_memory_size = 36000000
