--- a/config/production.conf
+++ b/config/production.conf
@@ -172,8 +172,9 @@ edges {
       error_queue = "edges_errors"
       threads = 32
       error_limit = 100
-      replay_interval = 900
-      per_flush_item_limit = 1000
+      error_delay = 900
+      strobe_interval = 1000
+      flush_limit = 100
       jitter_rate = 0
     }
     copy {
@@ -181,8 +182,9 @@ edges {
       error_queue = "copy_errors"
       threads = 12
       error_limit = 1000
-      replay_interval = 60
-      per_flush_item_limit = 1000
+      error_delay = 60
+      strobe_interval = 1000
+      flush_limit = 100
       jitter_rate = 0
     }
     slow {
@@ -190,8 +192,9 @@ edges {
       error_queue = "edges_slow_errors"
       threads = 2
       error_limit = 100
-      replay_interval = 900
-      per_flush_item_limit = 1000
+      error_delay = 900
+      strobe_interval = 1000
+      flush_limit = 100
       jitter_rate = 0
     }
     max_memory_size = 36000000
