--- a/config/test.conf
+++ b/config/test.conf
@@ -139,8 +139,9 @@ edges {
       error_queue = "edges_errors"
       threads = 1
       error_limit = 25
-      replay_interval = 900
-      per_flush_item_limit = 1000
+      error_delay = 900
+      strobe_interval = 1000
+      flush_limit = 100
       jitter_rate = 0
     }
     copy {
@@ -148,8 +149,9 @@ edges {
       error_queue = "copy_errors"
       threads = 1
       error_limit = 25
-      replay_interval = 900
-      per_flush_item_limit = 1000
+      error_delay = 900
+      strobe_interval = 1000
+      flush_limit = 100
       jitter_rate = 0
     }
     slow {
@@ -157,8 +159,9 @@ edges {
       error_queue = "edges_slow_errors"
       threads = 1
       error_limit = 25
-      replay_interval = 900
-      per_flush_item_limit = 1000
+      error_delay = 900
+      strobe_interval = 1000
+      flush_limit = 100
       jitter_rate = 0
     }
     max_memory_size = 36000000
