add a disable block for the connection pool too.

--- a/config/development.conf
+++ b/config/development.conf
@@ -19,6 +19,11 @@ db {
       pool_size = 10
       queue_size = 10000
     }
+
+    disable {
+      error_count = 3
+      seconds = 60
+    }
   }
 
   disable {
