can't use batch updates without the magic url_option.

--- a/config/production.conf
+++ b/config/production.conf
@@ -24,6 +24,13 @@ db {
       error_count = 100
       seconds = 60
     }
+
+    url_options {
+      useUnicode = "true"
+      characterEncoding = "UTF-8"
+      connectTimeout = "500"
+      rewriteBatchedStatements = "true"
+    }
   }
 
   disable {
