--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Fri Dec 10 11:24:16 PST 2010
+#Fri Dec 10 11:26:38 PST 2010
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.4.6
+project.version=1.4.7-SNAPSHOT
 build.scala.versions=2.7.7
 project.initialize=false
