--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Oct 21 19:21:51 PDT 2010
+#Fri Dec 10 11:24:16 PST 2010
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.4.6-SNAPSHOT
+project.version=1.4.6
 build.scala.versions=2.7.7
 project.initialize=false
