--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Jan 20 15:28:32 PST 2011
+#Tue Jan 25 19:09:46 PST 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.1-SNAPSHOT
+project.version=1.6.1
 build.scala.versions=2.7.7
 project.initialize=false
