--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Jan 25 19:09:46 PST 2011
+#Tue Jan 25 19:10:46 PST 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.1
+project.version=1.6.2-SNAPSHOT
 build.scala.versions=2.7.7
 project.initialize=false
