--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Jan 26 16:56:49 PST 2011
+#Wed Jan 26 16:59:01 PST 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.3
+project.version=1.6.4-SNAPSHOT
 build.scala.versions=2.7.7
 project.initialize=false
