--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Mon Jan 31 11:55:06 PST 2011
+#Mon Jan 31 11:58:15 PST 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.4
+project.version=1.6.5-SNAPSHOT
 build.scala.versions=2.7.7
 project.initialize=false
