--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Mon Jan 31 15:02:50 PST 2011
+#Mon Jan 31 15:06:28 PST 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.5
+project.version=1.6.6-SNAPSHOT
 build.scala.versions=2.7.7
 project.initialize=false
