--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Feb 02 16:46:57 PST 2011
+#Wed Feb 02 16:51:18 PST 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.6
+project.version=1.6.7-SNAPSHOT
 build.scala.versions=2.7.7
 project.initialize=false
