--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Feb 01 14:34:50 PST 2011
+#Fri Feb 04 14:46:57 PST 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.7-SNAPSHOT
+project.version=1.6.7
 build.scala.versions=2.7.7
 project.initialize=false
