--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Fri Feb 04 14:55:02 PST 2011
+#Mon Feb 07 18:15:51 PST 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.8-SNAPSHOT
+project.version=1.6.8
 build.scala.versions=2.7.7
 project.initialize=false
