--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Feb 15 11:06:41 PST 2011
+#Tue Feb 22 10:46:05 PST 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.10-SNAPSHOT
+project.version=1.6.10
 build.scala.versions=2.7.7
 project.initialize=false
