--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Feb 22 17:22:56 PST 2011
+#Tue Feb 22 17:27:14 PST 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.11
+project.version=1.6.12-SNAPSHOT
 build.scala.versions=2.7.7
 project.initialize=false
