--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Feb 22 17:27:14 PST 2011
+#Mon Mar 07 12:02:38 PST 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.12-SNAPSHOT
+project.version=1.6.12
 build.scala.versions=2.8.1
 project.initialize=false
