--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Mon Mar 07 12:06:56 PST 2011
+#Mon Mar 14 11:47:46 PDT 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.13-SNAPSHOT
+project.version=1.6.13
 build.scala.versions=2.8.1
 project.initialize=false
