--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Fri Apr 01 12:53:54 PDT 2011
+#Fri Apr 01 12:57:33 PDT 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.14
+project.version=1.6.15-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
