--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Apr 05 11:44:57 PDT 2011
+#Tue Apr 05 11:46:05 PDT 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.6.15
+project.version=1.6.16-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
