--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed May 11 17:26:50 PDT 2011
+#Wed May 11 17:30:21 PDT 2011
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.7.0
+project.version=1.7.1-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
