--- a/project/build.properties
+++ b/project/build.properties
@@ -3,6 +3,6 @@
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.0-alpha7
+project.version=1.8.0-alpha8-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
