--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Oct 25 13:32:23 PDT 2011
+#Wed Feb 01 10:37:14 PST 2012
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.0-alpha19-SNAPSHOT
+project.version=1.8.0-alpha19
 build.scala.versions=2.8.1
 project.initialize=false
