--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Feb 01 10:42:41 PST 2012
+#Thu Feb 02 15:47:40 PST 2012
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.1-alpha19-SNAPSHOT
+project.version=1.8.1-alpha19
 build.scala.versions=2.8.1
 project.initialize=false
