--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Feb 02 15:47:40 PST 2012
+#Thu Feb 02 15:50:17 PST 2012
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.1-alpha19
+project.version=1.8.2-alpha19-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
