org=com.twitter,name=flockdb,version=1.8.4-alpha19-SNAPSHOT

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Mar 08 19:12:09 PST 2012
+#Thu Mar 08 19:13:44 PST 2012
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.3-alpha19
+project.version=1.8.4-alpha19-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
