--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Mar 07 18:39:27 PST 2012
+#Thu Mar 08 19:12:09 PST 2012
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.3-alpha19-SNAPSHOT
+project.version=1.8.3-alpha19
 build.scala.versions=2.8.1
 project.initialize=false
