--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Sun Mar 11 15:24:30 PDT 2012
+#Sun Mar 11 15:27:38 PDT 2012
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.6
+project.version=1.8.7-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
