--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Mar 15 00:55:34 PDT 2012
+#Thu Mar 15 00:56:51 PDT 2012
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.7
+project.version=1.8.8-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
