--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Mar 15 14:32:10 PDT 2012
+#Thu Mar 15 14:32:39 PDT 2012
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.8
+project.version=1.8.9-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
