--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Feb 01 10:37:14 PST 2012
+#Thu Mar 29 16:18:19 PDT 2012
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.0-alpha20-SNAPSHOT-stuhood
+project.version=1.8.0-alpha20-rvp
 build.scala.versions=2.8.1
 project.initialize=false
