--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Tue Mar 27 02:04:28 PDT 2012
+#Thu Mar 29 19:42:07 PDT 2012
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.12-SNAPSHOT
+project.version=1.8.12
 build.scala.versions=2.8.1
 project.initialize=false
