--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Fri Mar 30 02:16:51 PDT 2012
+#Fri Mar 30 02:18:46 PDT 2012
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.13
+project.version=1.8.14-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
