--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Fri Mar 30 14:53:10 PDT 2012
+#Mon Apr 02 14:55:39 PDT 2012
 project.organization=com.twitter
 project.name=flockdb
 sbt.version=0.7.4
-project.version=1.8.15-SNAPSHOT
+project.version=1.8.15
 build.scala.versions=2.8.1
 project.initialize=false
